--- a/MIDS-W261-2015-HWK-Week01-Venjara.ipynb
+++ b/MIDS-W261-2015-HWK-Week01-Venjara.ipynb
@@ -22,11 +22,11 @@
    "metadata": {},
    "source": [
     "There are multiple ways to define big data. One way is the 3 Vs: volume, variety, velocity. \n",
-    "    - volume: that is so large it cannot fit in memory on a single computer\n",
-    "    - velocity: data that comes at rate (e.g., from clickstream) that creates a growing store of data\n",
-    "    - variety: data in a variety of formats, often unstructured, that needs to be brought together to draw insight\n",
+    "    - volume: that is so large it cannot fit in memory on a single computer. A typical laptop can store upto 1TB of data. Laptops have trouble processing training data even when sizes are in the tens of GBs of data. So, big data comes into play when training data sets are >~10-20GBs \n",
+    "    - velocity: the best example here is clickstream data that comes in every second which creates a growing store of data to manage and process\n",
+    "    - variety: data in a variety of formats, often unstructured, that needs to be brought together to draw insight. \n",
     "\n",
-    "In my world of HR analytics, we pay 1 in 6 Americans comprising over 20M records spread over a variety of systems and platforms. Users HR data is regularly updated as pay data can happen at a weekly, bi-weekly, or monthly basis. Employees are hired, change roles, leave. We recently sought to benchmark compensation for specific roles in specific geographies leveraging this data. Managing the diversity was by far the hardest as bringing together the data and finding a way to marry between different role names was very challenging.  "
+    "In my world of HR analytics, we pay 1 in 6 Americans comprising over 20M records (~1KB / record = 20TB) spread over a variety of systems and platforms. Users HR data is regularly updated as pay data can happen at a weekly, bi-weekly, or monthly basis. Employees are hired, change roles, leave. We recently sought to benchmark compensation for specific roles in specific geographies leveraging this data. Managing the diversity was by far the hardest as bringing together the data and finding a way to marry between different role names was very challenging.  "
    ]
   },
   {
@@ -40,10 +40,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Irreducible error is the difference between the observed value and the actual function. \n",
-    "The bias is the difference between the model and the actual value. \n",
-    "The variance is the spread in the difference between predictions of the different models. To compute this you would compute the difference between the 5 regression models at each value of X. \n",
-    "I would select a model by choose the one with the least mean square error which is a f(Variance, bias ^2 + irreducible error)"
+    "Using a test data set with T data points\n",
+    "\n",
+    "**For each data point x* in the test data set compute variance over the variance predictions (50 models\n",
+    "give 50 predictions for each data point x*)**\n",
+    "\n",
+    "**Definitions**\n",
+    "- hD(x*) = model prediction (assume 50 training datesets)\n",
+    "- h(x*) = Average model prediction\n",
+    "- f(x*) = TRUE (Actual function value)\n",
+    "- Y* = Observed target data (noisy)\n",
+    "\n",
+    "**For each data point x* calculate**\n",
+    "- Variance = sum(h(x*) – h(x*))^2/50 ## Describes how much h(x*) varies from one training set S to another\n",
+    "- Bias: h(x*) – f(x*) ## Describes the average error of h(x*).\n",
+    "- Noise: (y* – f(x*))2 ## Describes how much y* varies from f(x*)\n",
+    "\n",
+    "**Compute Expected prediction error = Variance + Bias^2 + Noise^2**\n",
+    "** Find the minimum expected prediction error ** \n",
+    "- This can be done via a plot as illustrated below. \n",
+    "\n",
+    "<img src=\"plot1.png\">\n",
+    "\n",
+    "\n"
    ]
   },
   {
